--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Hello !</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8"/>
   <style>
   .rails-default-error-page {
     background-color: #EFEFEF;
