--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8"/>
   <style>
   .rails-default-error-page {
-    background-color: #EFEFEF;
+    background-color: color-crystal-bell;
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
@@ -21,8 +21,8 @@
 
   .rails-default-error-page div.dialog > div {
     border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
+    border-right-color: color-basalt-grey;
+    border-left-color: color-basalt-grey;
     border-bottom-color: #BBB;
     border-top: #B00100 solid 4px;
     border-top-left-radius: 9px;
@@ -61,6 +61,7 @@
     <div>
       <h1>Hello !</h1>
     </div>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p>c'est la page d'index ,ça fait du bien .</p>
     <p> .Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
   </div>
